Removed runner provider