@@ -15,7 +15,6 @@ application {
     mainClass.set("ru.nstu.isma.grin.launcher.LauncherKt")
 
     applicationDefaultJvmArgs = listOf(
-        "--add-modules=jdk.incubator.vector",
         //"--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED",
         //"--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED"
     )
